<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:theme="@style/Theme.CodingApplication"
    tools:context=".GuessANumber">

    <LinearLayout
        android:id="@+id/scoreLayout"
        style="@style/linearSpaced">

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/scoreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0" />
        <TextView
            android:id="@+id/difficultyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy"
            android:gravity="right"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/difficultyLayout"
        android:layout_below="@id/scoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <RadioGroup
            android:id="@+id/difficultyRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:theme="@style/radioGroupAdapted"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/easyRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/easy"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/mediumRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medium"/>

            <RadioButton
                android:id="@+id/hardRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hard" />
        </RadioGroup>
        <Button
            android:id="@+id/setDifficultyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/select_ndifficulty"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/gameLayout"
        style="@style/linearSpaced"
        android:orientation="vertical"
        android:layout_below="@id/scoreLayout"
        android:visibility="invisible"
        android:layout_above="@id/difficultyCheckBox">



        <LinearLayout
            android:id="@+id/guessLayout"
            style="@style/linearSpaced">

            <TextView
                android:id="@+id/guessText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/guess_a_number" />


            <EditText
                android:id="@+id/editGuess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_number"
                android:gravity="center"
                android:inputType="number"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/validateLayout"
            style="@style/linearSpaced"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/validateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:onClick="makeAGuess"
                    android:text="@string/make_a_guess" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/prograssBarLayout"
            style="@style/linearSpaced">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="10" />

            <TextView
                android:id="@+id/progressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center_horizontal"
                android:text="@string/textview" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/hintLayout"
            style="@style/linearSpaced"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/hintIntroTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/your_number_is" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/textViewInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/too_high" />
            </LinearLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/hintListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/difficultyCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_difficulty"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>